Add GitHub Actions workflow for Netlify continuous deployment

--- a/netlify.toml
+++ b/netlify.toml
@@ -7,6 +7,23 @@
   NPM_VERSION = "9"
   NETLIFY_NEXT_PLUGIN_SKIP = "true"
 
+[build.processing]
+  skip_processing = false
+
+[build.processing.css]
+  bundle = true
+  minify = true
+
+[build.processing.js]
+  bundle = true
+  minify = true
+
+[build.processing.html]
+  pretty_urls = true
+
+[build.processing.images]
+  compress = true
+
 [[plugins]]
   package = "@netlify/plugin-nextjs"
 
