--- a/netlify.toml
+++ b/netlify.toml
@@ -5,7 +5,7 @@
 [build.environment]
   NODE_VERSION = "18"
   NPM_VERSION = "9"
-  NETLIFY_NEXT_PLUGIN_SKIP = "true"
+  NETLIFY_NEXT_PLUGIN_SKIP = "false"
 
 [build.processing]
   skip_processing = false
@@ -24,6 +24,7 @@
 [build.processing.images]
   compress = true
 
+# Use the Next.js plugin for proper SSR/SSG handling
 [[plugins]]
   package = "@netlify/plugin-nextjs"
 
@@ -48,6 +49,7 @@
   to = "/.netlify/functions/next-api/:splat"
   status = 200
 
+# All other routes should go to the Next.js server renderer
 [[redirects]]
   from = "/*"
   to = "/.netlify/functions/next-server"
