--- a/netlify.toml
+++ b/netlify.toml
@@ -5,54 +5,12 @@
 [build.environment]
   NODE_VERSION = "18"
   NPM_VERSION = "9"
-  NETLIFY_NEXT_PLUGIN_SKIP = "false"
+  NETLIFY_NEXT_PLUGIN_SKIP = "true"
 
-[build.processing]
-  skip_processing = false
-
-[build.processing.css]
-  bundle = true
-  minify = true
-
-[build.processing.js]
-  bundle = true
-  minify = true
-
-[build.processing.html]
-  pretty_urls = true
-
-[build.processing.images]
-  compress = true
-
-# Use the Next.js plugin for proper SSR/SSG handling
-[[plugins]]
-  package = "@netlify/plugin-nextjs"
-
-# These redirects are for client-side routing 
-[[redirects]]
-  from = "/_next/static/*"
-  to = "/_next/static/:splat"
-  status = 200
-
-[[redirects]]
-  from = "/_next/data/*"
-  to = "/_next/data/:splat"
-  status = 200
-
-[[redirects]]
-  from = "/_next/*"
-  to = "/_next/:splat"
-  status = 200
-
-[[redirects]]
-  from = "/api/*"
-  to = "/.netlify/functions/next-api/:splat"
-  status = 200
-
-# All other routes should go to the Next.js server renderer
+# Simple redirect for all requests to the Next.js app
 [[redirects]]
   from = "/*"
-  to = "/.netlify/functions/next-server"
+  to = "/index.html"
   status = 200
 
 # Security headers
