--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@prisma/client": "^6.5.0",
     "bcryptjs": "^3.0.2",
     "csv-parser": "^3.2.0",
+    "date-fns": "4.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.1",
     "next": "15.2.2",
