--- a/netlify.toml
+++ b/netlify.toml
@@ -1,26 +1,56 @@
 [build]
-  command = "npm run build"
+  command = "bash netlify.sh"
   publish = ".next"
 
 [build.environment]
   NODE_VERSION = "18"
   NPM_VERSION = "9"
   NETLIFY_NEXT_PLUGIN_SKIP = "false"
+  
+[build.processing]
+  skip_processing = false
 
-# Simple redirect for all requests to the Next.js app
+[build.processing.css]
+  bundle = true
+  minify = true
+
+[build.processing.js]
+  bundle = true
+  minify = true
+
+[build.processing.html]
+  pretty_urls = true
+
+[build.processing.images]
+  compress = true
+
+[[plugins]]
+  package = "@netlify/plugin-nextjs"
+
+# Handle Next.js static assets
+[[redirects]]
+  from = "/_next/static/*"
+  to = "/_next/static/:splat"
+  status = 200
+
+# Handle Next.js API routes
+[[redirects]]
+  from = "/api/*"
+  to = "/.netlify/functions/nextjs-server"
+  status = 200
+  force = true
+
+# Handle all other routes
 [[redirects]]
   from = "/*"
-  to = "/index.html"
+  to = "/.netlify/functions/nextjs-server"
   status = 200
 
 # Security headers
 [[headers]]
   for = "/*"
-  [headers.values]
-    X-Frame-Options = "DENY"
-    X-XSS-Protection = "1; mode=block"
-    X-Content-Type-Options = "nosniff"
-    Referrer-Policy = "same-origin"
-
-[[plugins]]
-  package = "@netlify/plugin-nextjs" 
+    [headers.values]
+      Referrer-Policy = "same-origin"
+      X-Content-Type-Options = "nosniff"
+      X-Frame-Options = "DENY"
+      X-XSS-Protection = "1; mode=block" 
