--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build --no-lint",
-    "start": "next start",
+    "build": "next build --no-lint && node postbuild.js",
+    "start": "node .next/standalone/server.js",
+    "start:next": "next start",
     "lint": "next lint",
     "setup-db": "./scripts/setup-db.sh",
     "prisma:generate": "prisma generate",
