--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build --no-lint && node postbuild.js",
-    "start": "node .next/standalone/server.js",
+    "start": "if [ -d \".next/standalone\" ]; then node .next/standalone/server.js; else next start; fi",
     "start:next": "next start",
     "lint": "next lint",
     "setup-db": "./scripts/setup-db.sh",
