--- a/netlify.toml
+++ b/netlify.toml
@@ -17,4 +17,5 @@
       Referrer-Policy = "same-origin"
       X-Content-Type-Options = "nosniff"
       X-Frame-Options = "DENY"
-      X-XSS-Protection = "1; mode=block" 
+      X-XSS-Protection = "1; mode=block"
+      Content-Security-Policy = "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self'; connect-src 'self' https:; frame-src 'self'; object-src 'none';" 
