--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@heroicons/react": "2.2.0",
     "@prisma/client": "^6.5.0",
     "bcryptjs": "^3.0.2",
+    "chart.js": "4.4.8",
     "cloudinary": "2.6.0",
     "csv-parser": "3.2.0",
     "date-fns": "4.1.0",
@@ -38,6 +39,7 @@
     "next-auth": "^4.24.11",
     "prisma": "^6.5.0",
     "react": "^19.0.0",
+    "react-chartjs-2": "5.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "5.5.0"
   },
