--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "react": "^19.0.0",
     "react-chartjs-2": "5.3.0",
     "react-dom": "^19.0.0",
-    "react-icons": "5.5.0"
+    "react-icons": "5.5.0",
+    "react-sparklines": "1.7.0",
+    "react-tooltip": "5.28.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -50,6 +52,7 @@
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.2.2",
+    "node-fetch": "3.3.2",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7"
