--- a/package.json
+++ b/package.json
@@ -50,9 +50,12 @@
     "@netlify/plugin-nextjs": "^5.10.0",
     "@tailwindcss/typography": "^0.5.16",
     "autoprefixer": "^10.4.21",
+    "axios": "1.8.3",
     "eslint": "^9",
     "eslint-config-next": "15.2.2",
+    "jimp": "1.6.0",
     "node-fetch": "3.3.2",
+    "open": "10.1.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7"
