--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "prisma": "^6.5.0",
     "react": "^19.0.0",
     "react-chartjs-2": "5.3.0",
+    "react-copy-to-clipboard": "5.1.0",
     "react-dom": "^19.0.0",
     "react-icons": "5.5.0",
     "react-sparklines": "1.7.0",
