--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@heroicons/react": "2.2.0",
+    "@next-auth/prisma-adapter": "1.0.7",
     "@prisma/client": "^6.5.0",
     "bcryptjs": "^3.0.2",
     "chart.js": "4.4.8",
