Disable conflicting workflows and consolidate to daily activity tracking

--- a/.github/workflows/record-rankings.yml
+++ b/.github/workflows/record-rankings.yml
@@ -1,10 +1,11 @@
 name: Record Daily Rankings
 
 on:
-  schedule:
-    # Run at 12:00 UTC (midnight PST) every day
-    - cron: '0 12 * * *'
-  workflow_dispatch: # Allow manual triggering
+  # Disable scheduled runs - now handled by record-daily-activity.yml
+  # schedule:
+  #   # Run at 12:00 UTC (midnight PST) every day
+  #   - cron: '0 12 * * *'
+  workflow_dispatch: # Allow manual triggering only
 
 jobs:
   record-rankings:
