--- a/.github/workflows/record-hourly-rankings.yml
+++ b/.github/workflows/record-hourly-rankings.yml
@@ -1,9 +1,10 @@
 name: Record Rankings History
 
 on:
-  schedule:
-    # Run every 6 hours at minute 5
-    - cron: '5 */6 * * *'
+  # Disable scheduled runs - now handled by record-daily-activity.yml
+  # schedule:
+  #   # Run every 6 hours at minute 5
+  #   - cron: '5 */6 * * *'
   
   # Allow manual trigger
   workflow_dispatch:
