--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-chartjs-2": "5.3.0",
     "react-copy-to-clipboard": "5.1.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "2.5.2",
     "react-icons": "5.5.0",
     "react-sparklines": "1.7.0",
     "react-tooltip": "5.28.0"
