--- a/package.json
+++ b/package.json
@@ -34,6 +34,10 @@
     "cloudinary": "2.6.0",
     "csv-parser": "3.2.0",
     "date-fns": "4.1.0",
+    "dotenv": "16.4.7",
+    "form-data": "4.0.2",
+    "imagekit": "6.0.0",
+    "imagekit-javascript": "3.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.1",
     "next": "15.2.2",
