--- a/package.json
+++ b/package.json
@@ -50,12 +50,14 @@
     "react-hot-toast": "2.5.2",
     "react-icons": "5.5.0",
     "react-sparklines": "1.7.0",
-    "react-tooltip": "5.28.0"
+    "react-tooltip": "5.28.0",
+    "uuid": "11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@netlify/plugin-nextjs": "^5.10.0",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/uuid": "10.0.0",
     "autoprefixer": "^10.4.21",
     "axios": "1.8.3",
     "eslint": "^9",
